suite configuration DbContext

--- a/TicketEase/appsettings.json
+++ b/TicketEase/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "ConnectionStrings": {
+    "DefaultConnectionString": "Data Source=win-jad\\sqlexpress;Initial Catalog=ticketease-db;Integrated Security=True;Encrypt=False;Pooling=False"
+  },
   "AllowedHosts": "*"
 }
