update after cleaning

--- a/TicketEase/appsettings.json
+++ b/TicketEase/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnectionString": "Data Source=win-jad\\sqlexpress;Initial Catalog=ticketease-db;Integrated Security=True;Encrypt=False;Pooling=False"
+    "DefaultConnectionString": "Data Source=HP\\SQLEXPRESS;Initial Catalog=ticketease-db;Integrated Security=True;Encrypt=False;Pooling=False"
   },
   "AllowedHosts": "*"
 }
